<resources>
    <string name="app_name">M-Expense</string>

    <string name="menu_in_main_list"> Trip List</string>
    <string name="menu_in_main_about">About</string>
    <string name="menu_in_main_add">Add Trip</string>

    <string name="error_not_found">Not Found</string>
    <string name="error_no_info">No Information</string>
    <string name="error_blank_name">Name cannot be blank.</string>
    <string name="error_blank_destination">Destination cannot be blank.</string>
    <string name="error_blank_start_date">Starting Date cannot be blank.</string>
    <string name="error_blank_end_date">Ending Date cannot be blank.</string>

    <string name="notification_empty_trip_list">There is no trip.</string>
    <string name="notification_empty_expense_list">There is no expense.</string>
    <string name="notification_create_success">Created successfully.</string>
    <string name="notification_create_fail">Not created successfully.</string>
    <string name="notification_delete_success">Deleted successfully.</string>
    <string name="notification_delete_fail">Not deleted successfully.</string>
    <string name="notification_update_success">Updated successfully.</string>
    <string name="notification_update_fail">Not updated successfully.</string>
    <string name="notification_reset_database_success">Reset database successfully.</string>
    <string name="notification_delete_confirm">Are you sure to delete this?.</string>

    <string name="label_name">Name</string>
    <string name="label_home">Home</string>
    <string name="label_add">Add Trip </string>
    <string name="label_start_date">Starting Date</string>
    <string name="label_end_date">Ending Date</string>
    <string name="label_destination">Destination</string>
    <string name="label_risk">Risk</string>
    <string name="label_description">Note</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_owner">Owner</string>
    <string name="label_tenant">Tenant</string>
    <string name="label_type">Type</string>
    <string name="label_add_expense">Add Expense</string>
    <string name="label_register">Register</string>
    <string name="label_confirm">Confirm</string>
    <string name="label_update">Update</string>
    <string name="label_search">Search</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_content">Content</string>
    <string name="label_setting">Setting</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="label_reset_database">Reset Database</string>
    <string name="label_reset_search">Reset Search</string>
    <string name="label_backup">Backup</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_comment">Comment</string>
    <string name="label_amount">Amount</string>
    <string name="label_filter">Keywords</string>

    <string-array name="request_type">
        <item>Travel</item>
        <item>Food</item>
        <item>Hotel</item>
        <item>Other</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>